2007-05-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: add '--with-oracle-version' option to
	    make a binary for the specified oracle version.
	    get the oracle client version from available OCI functions.
	* ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/rowid.c, ext/oci8/tdo.c, ext/oci8/xmldb.c: use
	    BUILD_FOR_ORACLE_major_minor macros instead of HAVE_xxx
	    macros.
	* ext/oci8/oci8.c: delete unsed code.
	* dist-files: add ext/oci8/xmldb.c and test/test_connstr.rb.

2007-05-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix to return nil for LONG null column.
	* ext/oci8/env.c: use OCIInitialize() and OCIEnvInit() instead
	   of OCIEnvCreate() on every Oracle version.
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/oci8.h: raise
	   "OCI Library Initialization Error" when Oracle can't supply
	   the error message.
	* ext/oci8/oci8.c: raise OCIException instead of TypeError.
	* lib/oci8/metadata.rb: fix typo in comment.
	* VERSION: change to 2.0-svn.

2007-04-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/tdo.c: enable XML support when Oracle 10g.
	* ext/oci8/xmldb.c: add oci8_make_rexml() to support XML for reading.
	* ext/oci8/lob.c: fix compiler warnings.
	* ext/oci8/error.c: fix a bit.

2007-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch NCLOB column value as an OCI8::NCLOB. fetch
	    BINARY_DOUBLE and BINARY_FLOAT column as a Float.
	* lib/oci8/metadata.rb: OCI8::Metadata::Column#data_type can return
	    :nclob, :bfloat and :bdouble now.
	* ext/oci8/extconf.rb: check whether OCILobCreateTemporary exists.
	* ext/oci8/lob.c: add OCI8::NCLOB.
	* ext/oci8/oci8.h: add oci8_make_nclob().
	* ext/oci8/tdo.c: use oci8_make_nclob().

2007-04-26  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch BFILE as OCI8::BFILE.
	* ext/oci8/lob.c: add OCI8::BFILE.
	* ext/oci8/oci8.h: add oci8_make_bfile().